--- a/package.json
+++ b/package.json
@@ -17,27 +17,31 @@
     "@neondatabase/serverless": "^0.10.4",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/adapter-neon": "^6.2.1",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "autoprefixer": "^10.4.20",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "glob": "^11.0.1",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "15.1",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "postcss": "^8.5.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
@@ -55,9 +59,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "jest": "^29.7.0",
-    "postcss": "^8",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
