--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "@uploadthing/react": "^7.3.0",
     "autoprefixer": "^10.4.20",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
@@ -40,9 +42,11 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
