Search function and sorting products

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@next/env": "^15.2.1",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/adapter-neon": "^6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.2",
@@ -30,6 +32,8 @@
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1",
@@ -47,12 +51,13 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.2",
+    "vaul": "^1.1.2",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.18",
     "@types/react": "^19",
@@ -63,7 +68,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "jest": "^29.7.0",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
