--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
@@ -27,6 +28,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "@react-email/components": "^0.0.33",
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@uploadthing/react": "^7.3.0",
@@ -45,8 +47,10 @@
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^3.0.7",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "resend": "^4.1.2",
     "shadcn-ui": "^0.9.4",
     "slugify": "^1.6.6",
     "stripe": "^17.7.0",
