--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "embla-carousel-react": "^8.5.2",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
-    "next": "^15.3.3",
+    "next": "^15.5.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
@@ -76,7 +76,7 @@
     "@types/ws": "^8.5.14",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.4.7",
-    "eslint": "^9.31.0",
+    "eslint": "^9.35.0",
     "eslint-config-next": "15.4.2",
     "jest": "^29.7.0",
     "prisma": "^6.4.1",
@@ -88,6 +88,12 @@
   "overrides": {
     "@react-email/components": {
       "react": "$react"
+    }
+  },
+  "pnpm": {
+    "overrides": {
+      "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": "2.0.2"
     }
   }
 }
