--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -3,7 +3,8 @@
     "amplifyhosting": {
       "lastPushTimeStamp": "2025-04-14T16:08:54.171Z",
       "service": "amplifyhosting",
-      "type": "cicd"
+      "type": "cicd",
+      "providerPlugin": "awscloudformation"
     }
   },
   "parameters": {
@@ -23,5 +24,6 @@
         }
       ]
     }
-  }
+  },
+  "version": 3
 }
