--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
       "react": "$react"
     }
   },
+  "packageManager": "pnpm@10.17.0",
   "pnpm": {
     "overrides": {
       "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
