fix: clean up Amplify configuration for frontend-only deployment
- Update build commands to use pnpm instead of npm
- Fix project path in local-env-info.json
- Remove conflicting backend configuration files
- Clean up team-provider-info.json
- Add backend skip configuration in amplify.yml

This resolves the 'Stack does not exist' error by removing
backend dependencies and focusing on frontend-only hosting.

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,4 +1,9 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - echo 'Skipping backend build - using frontend only'
 frontend:
   phases:
     preBuild:
