fix: remove amplify from pnpm workspace and clean up package.json
- Remove amplify/package.json that was causing workspace lockfile conflicts
- Update pnpm-workspace.yaml to exclude amplify directory
- This resolves the 'ERR_PNPM_OUTDATED_LOCKFILE' error

The workspace was detecting 2 projects (root + amplify) but the
amplify package.json dependencies weren't in the lockfile.

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,7 +12,7 @@ frontend:
         - npm install -g pnpm@10.17.0
         - echo "Verifying pnpm installation"
         - pnpm --version
-        - echo "Installing dependencies with pnpm"
+        - echo "Installing dependencies with pnpm from root directory"
         - pnpm install --frozen-lockfile
         - echo "Generating Prisma client"
         - pnpm prisma generate
