--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@uploadthing/react": "^7.3.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
@@ -90,11 +91,14 @@
       "react": "$react"
     }
   },
-  "packageManager": "pnpm@10.17.0",
+  "packageManager": "pnpm@10.17.1",
   "pnpm": {
     "overrides": {
       "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
       "brace-expansion@>=2.0.0 <=2.0.1": "2.0.2"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@vercel/speed-insights"
+    ]
   }
 }
