--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,22 @@
 {
-"extends": "next/core-web-vitals",
-"rules": {
+  "extends": "next/core-web-vitals",
+  "rules": {
     "no-unused-vars": [
-    "warn",
-    {
+      "warn",
+      {
         "varsIgnorePattern": "^_",
         "argsIgnorePattern": "^_"
-    }
-    ]
-}
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "varsIgnorePattern": "^_",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react/no-unescaped-entities": "warn"
+  }
 }
 
