--- a/package.json
+++ b/package.json
@@ -18,88 +18,99 @@
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@next/env": "^15.5.4",
-    "@octokit/plugin-paginate-rest": "^13.1.1",
-    "@octokit/request": "^10.0.3",
-    "@octokit/request-error": "^7.0.0",
+    "@octokit/plugin-paginate-rest": "^13.2.0",
+    "@octokit/request": "^10.0.5",
+    "@octokit/request-error": "^7.0.1",
     "@octokit/rest": "^21.1.1",
-    "@paypal/react-paypal-js": "^8.8.2",
-    "@prisma/adapter-neon": "^6.16.2",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.5",
+    "@paypal/react-paypal-js": "^8.9.2",
+    "@prisma/adapter-neon": "^6.16.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "@react-email/components": "^0.0.36",
-    "@stripe/react-stripe-js": "^3.4.0",
-    "@stripe/stripe-js": "^6.0.0",
-    "@uploadthing/react": "^7.3.0",
+    "@stripe/react-stripe-js": "^3.10.0",
+    "@stripe/stripe-js": "^6.1.0",
+    "@uploadthing/react": "^7.3.3",
     "@vercel/speed-insights": "^1.2.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "embla-carousel-autoplay": "^8.5.2",
-    "embla-carousel-react": "^8.5.2",
-    "lru-cache": "^11.0.2",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "isomorphic-dompurify": "^2.28.0",
+    "lru-cache": "^11.2.2",
     "lucide-react": "^0.474.0",
     "next": "^15.5.4",
-    "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.4.4",
+    "next-auth": "5.0.0-beta.29",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "query-string": "^9.1.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-email": "^4.2.3",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
-    "resend": "^4.1.2",
-    "shadcn-ui": "^0.9.4",
+    "query-string": "^9.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-email": "^4.2.12",
+    "react-hook-form": "^7.63.0",
+    "recharts": "^2.15.4",
+    "resend": "^4.8.0",
+    "shadcn-ui": "^0.9.5",
     "slugify": "^1.6.6",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.5.2",
+    "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "ws": "^8.18.3",
-    "zod": "^3.24.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@prisma/client": "^6.16.3",
+    "@prisma/client": "6.16.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.18",
-    "@types/react": "^19.1.15",
-    "@types/react-dom": "^19.1.9",
-    "@types/ws": "^8.5.14",
+    "@types/node": "^20.19.19",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "eslint": "^9.36.0",
     "eslint-config-next": "15.5.3",
     "jest": "^29.7.0",
-    "prisma": "^6.16.3",
-    "ts-jest": "^29.2.5",
+    "prisma": "6.16.3",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.2"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   },
   "overrides": {
     "@react-email/components": {
       "react": "$react"
     }
   },
-  "packageManager": "pnpm@10.17.1",
+  "packageManager": "pnpm@10.18.0",
+  "prisma": {
+    "seed": "tsx ./db/seed.ts"
+  },
   "pnpm": {
     "overrides": {
       "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
       "brace-expansion@>=2.0.0 <=2.0.1": "2.0.2"
     },
     "onlyBuiltDependencies": [
-      "@vercel/speed-insights"
+      "@prisma/client",
+      "@prisma/engines",
+      "@vercel/speed-insights",
+      "esbuild",
+      "msgpackr-extract",
+      "prisma",
+      "sharp"
     ]
   }
 }
