--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:https": "cp .env.https .env && next dev --experimental-https --experimental-https-key ./localhost+2-key.pem --experimental-https-cert ./localhost+2.pem",
     "build": "next build",
+    "vercel-build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
@@ -67,7 +68,9 @@
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "ws": "^8.18.3",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "prisma": "6.16.3",
+    "@prisma/client": "6.16.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -95,9 +98,6 @@
     }
   },
   "packageManager": "pnpm@10.18.0",
-  "prisma": {
-    "seed": "tsx ./db/seed.ts"
-  },
   "pnpm": {
     "overrides": {
       "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
