--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.9.2",
     "@prisma/adapter-neon": "^6.16.3",
+    "@prisma/client": "6.16.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -52,11 +53,12 @@
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
+    "prisma": "6.16.3",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-email": "^4.2.12",
-    "react-hook-form": "^7.63.0",
+    "react-hook-form": "^7.64.0",
     "recharts": "^2.15.4",
     "resend": "^4.8.0",
     "shadcn-ui": "^0.9.5",
@@ -68,9 +70,7 @@
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "ws": "^8.18.3",
-    "zod": "^3.25.76",
-    "prisma": "6.16.3",
-    "@prisma/client": "6.16.3"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -82,7 +82,7 @@
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.6.1",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.5.3",
     "jest": "^29.7.0",
     "prisma": "6.16.3",
@@ -107,10 +107,12 @@
       "@prisma/client",
       "@prisma/engines",
       "@vercel/speed-insights",
+      "bufferutil",
       "esbuild",
       "msgpackr-extract",
       "prisma",
-      "sharp"
+      "sharp",
+      "unrs-resolver"
     ]
   }
 }
