--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "postinstall": "prisma generate",
     "test": "jest",
     "test:watch": "jest --watch",
-    "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001"
+    "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001",
+    "packageManager": "pnpm@7.5.1"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
+    "@auth/prisma-adapter": "^2.11.0",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
     "@next/env": "^15.5.4",
@@ -24,8 +25,8 @@
     "@octokit/request-error": "^7.0.1",
     "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.9.2",
-    "@prisma/adapter-neon": "^6.16.3",
-    "@prisma/client": "6.16.3",
+    "@prisma/adapter-neon": "^6.17.0",
+    "@prisma/client": "6.17.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -53,11 +54,11 @@
     "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "prisma": "6.16.3",
+    "prisma": "6.17.0",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-email": "^4.2.12",
+    "react-email": "^4.3.0",
     "react-hook-form": "^7.64.0",
     "recharts": "^2.15.4",
     "resend": "^4.8.0",
@@ -77,8 +78,8 @@
     "@prisma/client": "6.16.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.19",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.6.1",
