chore: update building scripts

--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:https": "cp .env.https .env && next dev --experimental-https --experimental-https-key ./localhost+2-key.pem --experimental-https-cert ./localhost+2.pem",
-    "build": "next build",
-    "vercel-build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001",
-    "packageManager": "pnpm@7.5.1"
-  },
+  "dev": "next dev",
+  "dev:https": "cp .env.https .env && next dev --experimental-https --experimental-https-key ./localhost+2-key.pem --experimental-https-cert ./localhost+2.pem",
+  "build": "prisma generate && next build",
+  "start": "next start",
+  "lint": "next lint",
+  "postinstall": "prisma generate",
+  "test": "jest",
+  "test:watch": "jest --watch",
+  "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001",
+  "packageManager": "pnpm@7.5.1"
+},
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
     "@hookform/resolvers": "^3.10.0",
