chore: update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
   "framework": "nextjs",
-  "buildCommand": "pnpm run build",
+  "buildCommand": "pnpm prisma generate && pnpm run build",
   "installCommand": "pnpm install",
   "functions": {
-    "app/**/*.ts": {
-      "maxDuration": 30
-    },
-    "app/**/*.js": {
-      "maxDuration": 30
-    }
+    "app/**/*.ts": { "maxDuration": 30 },
+    "app/**/*.js": { "maxDuration": 30 }
   },
   "env": {
     "SKIP_ENV_VALIDATION": "true"
