--- a/package.json
+++ b/package.json
@@ -2,42 +2,42 @@
   "name": "prostore",
   "version": "0.1.0",
   "private": true,
- "scripts": {  
-  "dev": "next dev",
-  "dev:https": "cp .env.https .env && next dev --experimental-https --experimental-https-key ./localhost+2-key.pem --experimental-https-cert ./localhost+2.pem",
-  "prebuild": "prisma generate",
-  "build": "prisma generate && next build",
-  "start": "next start",
-  "postinstall": "prisma generate",
-  "db:push": "prisma db push",
-  "db:seed": "prisma db seed",
-  "db:migrate": "prisma migrate deploy",
-  "lint": "next lint",
-  "test": "jest",
-  "test:watch": "jest --watch", 
-  "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001",  
-  "packageManager": "pnpm@7.5.1"
-},
+  "scripts": {
+    "dev": "next dev",
+    "dev:https": "cp .env.https .env && next dev --experimental-https --experimental-https-key ./localhost+2-key.pem --experimental-https-cert ./localhost+2.pem",
+    "prebuild": "prisma generate",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "prisma db seed",
+    "db:migrate": "prisma migrate deploy",
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "email": "cp .env ./node_modules/react-email && email dev --dir email --port 3001",
+    "packageManager": "pnpm@7.5.1"
+  },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.0",
+    "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/env": "^15.5.4",
-    "@octokit/plugin-paginate-rest": "^13.2.0",
-    "@octokit/request": "^10.0.5",
-    "@octokit/request-error": "^7.0.1",
+    "@next/env": "^15.5.6",
+    "@octokit/plugin-paginate-rest": "^13.2.1",
+    "@octokit/request": "^10.0.6",
+    "@octokit/request-error": "^7.0.2",
     "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.9.2",
-    "@prisma/adapter-neon": "^6.17.0",
-    "@prisma/client": "6.17.0",
+    "@prisma/adapter-neon": "^6.19.0",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
     "@react-email/components": "^0.0.36",
     "@stripe/react-stripe-js": "^3.10.0",
@@ -50,18 +50,18 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "isomorphic-dompurify": "^2.28.0",
+    "isomorphic-dompurify": "^2.31.0",
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.474.0",
-    "next": "^15.5.4",
-    "next-auth": "5.0.0-beta.29",
+    "next": "^15.5.6",
+    "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-email": "^4.3.0",
-    "react-hook-form": "^7.64.0",
+    "react-email": "^4.3.2",
+    "react-hook-form": "^7.66.0",
     "recharts": "^2.15.4",
     "resend": "^4.8.0",
     "shadcn-ui": "^0.9.5",
@@ -78,17 +78,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.19",
+    "@types/node": "^20.19.24",
     "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@types/react-dom": "^19.2.2",
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.6.1",
-    "eslint": "^9.37.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.5.3",
     "jest": "^29.7.0",
-    "prisma": "6.17.0",
-    "ts-jest": "^29.4.4",
+    "prisma": "^6.19.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
