--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/env": "^15.5.7",
+    "@next/env": "^15.5.9",
     "@octokit/plugin-paginate-rest": "^13.2.1",
     "@octokit/request": "^10.0.7",
     "@octokit/request-error": "^7.1.0",
     "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.9.2",
-    "@prisma/adapter-neon": "^6.19.0",
+    "@prisma/adapter-neon": "^6.19.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -43,48 +43,50 @@
     "@stripe/stripe-js": "^6.1.0",
     "@uploadthing/react": "^7.3.3",
     "@vercel/speed-insights": "^1.3.1",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "isomorphic-dompurify": "^2.33.0",
+    "isomorphic-dompurify": "^2.34.0",
     "lru-cache": "^11.2.4",
     "lucide-react": "^0.474.0",
-    "next": "^16.0.7",
+    "next": "^16.0.10",
     "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
     "query-string": "^9.3.1",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-email": "^4.3.2",
     "react-hook-form": "^7.68.0",
     "recharts": "^2.15.4",
     "resend": "^4.8.0",
     "shadcn-ui": "^0.9.5",
     "slugify": "^1.6.6",
-    "stripe": "^17.7.0",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "ws": "^8.18.3",
-    "zod": "^3.25.76"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@prisma/client": "^7.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.25",
+    "@types/node": "^20.19.27",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.6.1",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.0.7",
     "jest": "^29.7.0",
     "prisma": "^7.1.0",
@@ -99,11 +101,13 @@
       "react": "$react"
     }
   },
-  "packageManager": "pnpm@10.24.0",
+  "packageManager": "pnpm@10.25.0",
   "pnpm": {
     "overrides": {
-      "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
-      "brace-expansion@>=2.0.0 <=2.0.1": "2.0.2"
+      "brace-expansion": "^2.0.2",
+      "minimatch": "^9.0.5",
+      "glob": "^10.4.5",
+      "inflight": "npm:@humanfs/inflight@^1.0.2"
     },
     "onlyBuiltDependencies": [
       "@prisma/client",
