--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@octokit/request-error": "^7.1.0",
     "@octokit/rest": "^21.1.1",
     "@paypal/react-paypal-js": "^8.9.2",
-    "@prisma/adapter-neon": "^6.19.1",
+    "@prisma/adapter-neon": "^6.19.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -61,7 +61,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-email": "^4.3.2",
-    "react-hook-form": "^7.70.0",
+    "react-hook-form": "^7.71.1",
     "recharts": "^2.15.4",
     "resend": "^4.8.0",
     "shadcn-ui": "^0.9.5",
@@ -80,8 +80,8 @@
     "@prisma/client": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.27",
-    "@types/react": "^19.2.7",
+    "@types/node": "^20.19.29",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
     "bufferutil": "^4.1.0",
@@ -107,7 +107,8 @@
       "brace-expansion": "^2.0.2",
       "minimatch": "^9.0.5",
       "glob": "^10.4.5",
-      "inflight": "npm:@humanfs/inflight@^1.0.2"
+      "inflight": "npm:@humanfs/inflight@^1.0.2",
+      "hono": ">=4.11.4"
     },
     "onlyBuiltDependencies": [
       "@prisma/client",
